# chatterbox

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE.md  README.md  build.rs
.github/workflows/: action.yml
scripts/: generate_certificates.sh  grep_bad_request.sh  grep_bundle_publication.sh  grep_device_fetch.sh  grep_disco_capabilities.sh  grep_for_error.sh  grep_item-not-found.sh  grep_message_send_receive.sh  grep_peer_has_key.sh  run_xmpp_server.sh  test_bundle_publication.sh  test_carbons.sh  test_e2e.sh  test_e2e_logic.sh
src/: credentials.rs  lib.rs  main.rs  models.rs  ui.rs  utils.rs
src/omemo/: bundle.rs  crypto.rs  device_discovery.rs  device_id.rs  mod.rs  protocol.rs  session.rs  storage.rs
src/xmpp/: chat_states.rs  connection.rs  delivery_receipts.rs  discovery.rs  introspection.rs  message_archive.rs  message_carbons.rs  mod.rs  omemo_integration.rs  presence.rs  roster.rs
tests/: credentials.rs  message_archive_tests.rs  omemo_device_identity_and_carbons_test.rs  omemo_encryption_tests.rs  omemo_message_exchange.rs  omemo_message_test.rs  omemo_multidevice_tests.rs  omemo_simple_test.rs  xmpp_basic_tests.rs
tests/common/: mod.rs
