[package]
name = "chatterbox"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.23.0"
crossterm = "0.27.0"
xmpp-parsers = "0.19.1"
tokio = { version = "1.28.2", features = ["full"] }
tokio-xmpp = "3.5.0"
futures = "0.3.28"
tokio-stream = "0.1.14"
anyhow = "1.0.75"
thiserror = "1.0.48"
log = "0.4.20"
env_logger = "0.10.0"
tui-input = "0.8.0"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
base64 = "0.21"
rand = "0.8.5"
lazy_static = "1.4.0"
# OMEMO-related dependencies
rusqlite = { version = "0.29.0", features = ["bundled"] }  # For local key storage
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }          # For Diffie-Hellman key exchange
ed25519-dalek = "2.0.0"         # For signatures in OMEMO
aes-gcm = "0.10.3"              # For AES-256 encryption
sha2 = "0.10.8"                 # For hashing operations
zeroize = "1.6.0"               # For secure memory clearing
async-trait = "0.1.77"          # For async trait implementations
bincode = "2.0.1"
futures-util = "0.3.31"
roxmltree = "0.20.0"
aes = "0.8.4"
cbc = "0.1.2"
hmac = "0.12.1"
hkdf = "0.12.3"                 # For key derivation functions
block-padding = "0.3.3"
tempfile = "3.8.0"              # For temporary files in tests
hostname = "0.4.1"
once_cell = "1.21.3"            # For compile-time constants
xml = "0.8.20"                  # For XML parsing and serialization
hex = "0.4.3"
textwrap = "0.16.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11.1"

[build-dependencies]
regex = "1.11.1"
